# VR_Interaction

./: CMakeLists.txt  MyApp.cpp  MyApp.hh  README.md  cube.mtl  main.cpp  start-K450x-2node.bat  start-K450x-single.bat  start-VRlab-HMD.bat  start-VRlab-Workbench.bat  start.bash
build_VR/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  main.vcxproj  main.vcxproj.filters  tnm116-interactions.sln
build_VR/main.dir/Release/: main.exe.recipe
build_VR/main.dir/Release/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_VR/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_VR/x64/Release/INSTALL/: INSTALL.recipe
build_VR/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_X/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  main.vcxproj  main.vcxproj.filters  tnm116-interactions.sln
build_X/main.dir/Debug/: main.exe.recipe
build_X/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  (+1 more)
config/: desktop-single-VRPNtracking.xml
obj_models/: rp_mei_30k.mtl  rp_nathan.mtl  rp_sophia.mtl
(+21 files in other folders)
